# plata-theme

./: .gitignore  Makefile.am  README.md  configure.ac
.gitlab/issue_templates/: Issue.md  Issues.md
data/: Makefile.am  index.theme  index.theme-compact  index.theme-dark  index.theme-dark-compact  index.theme-light  index.theme-light-compact  index.theme-lumine-compact  index.theme-noir
m4/: plata-color-scheme.m4  plata-gnome.m4  plata-mate.m4  plata-option.m4
src/extra/: Makefile.am
src/extra/airforsteam/: recolor-air.sh
src/extra/airforsteam/Resource/colors/: plata-noir.styles  plata-noir.styles.in
src/extra/airforsteam/Resource/themes/: _plata-noir.styles
src/extra/airforsteam/sass/: _air-colors.scss  air-dark.scss
src/extra/gtksourceview/: plata-dark.xml  plata-dark.xml.in  plata-light.xml  plata-light.xml.in  recolor-gtksourceview.sh
src/extra/gtksourceview/sass/: _gtksourceview-colors.scss  gtksourceview.scss
src/extra/plank/: dock-dark.theme  dock-light.theme
src/extra/telegram/: plata-lumine.tdesktop-theme  plata-noir.tdesktop-theme  plata.tdesktop-theme  recolor-telegram.sh
src/extra/telegram/dark/: colors.tdesktop-theme  colors.tdesktop-theme.in
src/extra/telegram/light/: colors.tdesktop-theme  colors.tdesktop-theme.in
src/extra/telegram/mixed/: colors.tdesktop-theme  colors.tdesktop-theme.in
src/extra/telegram/sass/: _telegram-colors.scss  telegram_dark.scss  telegram_light.scss
src/extra/tweetdeck/: recolor-cdk.sh
src/extra/tweetdeck/dark/: ColorDeck-dark.cdk.in
src/gtk/: Makefile.am
src/gtk/asset/: assets-gtk2.svg.in  assets-gtk3.svg.in
src/gtk/asset/assets-gtk2-scripts/: assets-clone-gtk2.txt  assets-gtk2.txt  clone-assets-gtk2.sh  recolor-assets-gtk2.sh  render-assets-gtk2.sh
src/gtk/asset/assets-gtk3-scripts/: assets-gtk3.txt  recolor-assets-gtk3.sh  render-assets-gtk3.sh
src/gtk/gtk-2.0/: 3rd-party-compact.rc  3rd-party-dark-compact.rc  3rd-party-dark.rc  3rd-party-light-compact.rc  3rd-party-light.rc  3rd-party.rc  common-compact.rc  common-dark-compact.rc  common-dark.rc  common.rc  gtkrc-dark.in  gtkrc-light.in  gtkrc.in  parse-gtk2.sh
src/gtk/sass/: README  compile-gresource.sh  gtk-dark.gresource.xml.in  gtk.gresource.xml.in  parse-sass.sh
src/gtk/sass/2.0/: _gtk2-colors.scss  gtk-dark.scss  gtk-light.scss
src/gtk/sass/3.20/: gtk-dark-compact.scss  gtk-light-compact.scss  gtk-mixed-compact.scss
src/gtk/sass/3.22/: gtk-dark-compact.scss  gtk-light-compact.scss  gtk-mixed-compact.scss
src/gtk/sass/3.24/: gtk-dark-compact.scss  gtk-light-compact.scss  gtk-mixed-compact.scss
src/gtk/sass/4.0/: gtk-dark-compact.scss  gtk-light-compact.scss  gtk-mixed-compact.scss
src/gtk/sass/common/: _3rd-party.scss  _colors-public.scss  _colors.scss  _common.scss  _drawing.scss  _key_colors.scss  _misc.scss
src/gtk/sass/common/resources/: _functions.scss  _key_colors.scss  _variables.scss
src/shell/: Makefile.am
src/shell/asset/: assets-cinnamon.txt  assets-gnome-shell.txt  clone-assets-cinnamon.sh  clone-assets-gnome-shell.sh  render-assets-cinnamon-thumb.sh
src/shell/asset/assets-cinnamon/common/checkbox/: radiobutton-checked.svg.in
src/shell/asset/assets-cinnamon/common/misc/: close-hover.svg.in
src/shell/asset/assets-cinnamon/dark/checkbox/: checkbox-checked.svg.in
src/shell/asset/assets-cinnamon/mixed/checkbox/: checkbox-checked.svg.in
src/shell/asset/assets-gnome-shell/common/: checkbox-hover.svg.in
src/shell/sass/: README  compile-gresource.sh  parse-sass.sh
src/shell/sass/cinnamon/: _common.scss
src/shell/sass/common/: _colors.scss  _drawing.scss
src/shell/sass/common/resources/: _function.scss
src/shell/sass/gnome-shell/: _common.scss  _extension-window-list.scss  _extensions.scss
src/shell/sass/gnome-shell/3.24/: gnome-shell-theme.gresource.xml  pad-osd.scss
src/shell/sass/gnome-shell/3.26/: gdm3-light-compact.scss  pad-osd.scss
src/shell/sass/gnome-shell/3.32/: classic-dark.scss  classic-light.scss  gdm3-compact.scss  gdm3-dark-compact.scss  gdm3-dark.scss  gdm3-light-compact.scss  gdm3-light.scss  gdm3.scss  gnome-shell-compact.scss  gnome-shell-dark-compact.scss  gnome-shell-dark.scss  gnome-shell-light-compact.scss  gnome-shell-light.scss  gnome-shell-theme.gresource.xml  gnome-shell.scss  pad-osd.scss  stylesheet-dark.scss  stylesheet-light.scss  workspaces-to-dock-dark.scss  workspaces-to-dock-light.scss
src/wm/: Makefile.am
src/wm/asset/assets-metacity-scripts/: assets-metacity-misc.txt  clone-assets-metacity.sh  render-assets-metacity.sh
src/wm/asset/assets-metacity/common/: button_close_prelight.svg.in  button_close_pressed.svg.in
src/wm/asset/assets-openbox-scripts/: clone-assets-openbox.sh
src/wm/asset/assets-xfwm-scripts/: assets-xfwm.txt  recolor-assets-xfwm.sh  render-assets-xfwm.sh
src/wm/asset/assets-xfwm/dark/: close-prelight.svg.in  close-pressed.svg.in
src/wm/asset/assets-xfwm/dark-compact/: close-prelight.svg.in  close-pressed.svg.in
src/wm/asset/assets-xfwm/light/: close-prelight.svg.in  close-pressed.svg.in
src/wm/asset/assets-xfwm/light-compact/: close-prelight.svg.in  close-pressed.svg.in
src/wm/metacity-1/dark/: metacity-theme-2.xml  metacity-theme-3.xml
src/wm/metacity-1/light/: metacity-theme-2.xml  metacity-theme-3.xml
src/wm/metacity-1/light-compact/: metacity-theme-3.xml
src/wm/openbox-3/: compton.conf  recolor-openbox.sh  themerc-dark.in  themerc-light.in  themerc.in
